--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
   "dependencies": {
     "aos": "^3.0.0-beta.6",
     "bcrypt": "^6.0.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "idb": "^8.0.2",
+    "jsonwebtoken": "^9.0.2",
     "leaflet": "^1.9.4",
     "lit-html": "^3.3.0",
+    "mysql": "^2.18.1",
     "mysql2": "^3.14.1"
   },
   "devDependencies": {
