--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "jsonwebtoken": "^9.0.2",
     "leaflet": "^1.9.4",
     "lit-html": "^3.3.0",
+    "multer": "^2.0.0",
     "mysql": "^2.18.1",
-    "mysql2": "^3.14.1"
+    "mysql2": "^3.14.1",
+    "nodemailer": "^7.0.3"
   },
   "devDependencies": {
     "copy-webpack-plugin": "^13.0.0",
