--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "html-webpack-plugin": "^5.6.3",
     "style-loader": "^4.0.0",
     "webpack-cli": "^6.0.1",
-    "webpack-dev-server": "^5.2.1"
+    "webpack-dev-server": "^5.2.1",
+    "workbox-webpack-plugin": "^7.3.0"
   },
   "name": "cerita-nusantara",
   "version": "1.0.0",
