--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "idb": "^8.0.2",
     "jsonwebtoken": "^9.0.2",
     "leaflet": "^1.9.4",
+    "lit": "^3.3.0",
     "lit-html": "^3.3.0",
     "multer": "^2.0.0",
     "mysql": "^2.18.1",
