--- a/package.json
+++ b/package.json
@@ -1,8 +1,17 @@
 {
+  "name": "cerita-nusantara",
+  "version": "1.0.0",
+  "description": "Website Cerita Nusantara",
+  "main": "webpack.config.js",
   "scripts": {
     "start": "webpack serve --mode development",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "deploy": "npm run build && gh-pages -d dist"
   },
+  "homepage": "https://github.com/rhmt2492/CeritaNusantara.git",
+  "author": "",
+  "license": "ISC",
+  "keywords": [],
   "dependencies": {
     "aos": "^3.0.0-beta.6",
     "bcrypt": "^6.0.0",
@@ -22,17 +31,11 @@
   "devDependencies": {
     "copy-webpack-plugin": "^13.0.0",
     "css-loader": "^7.1.2",
+    "gh-pages": "^6.3.0",
     "html-webpack-plugin": "^5.6.3",
     "style-loader": "^4.0.0",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.1",
     "workbox-webpack-plugin": "^7.3.0"
-  },
-  "name": "cerita-nusantara",
-  "version": "1.0.0",
-  "main": "webpack.config.js",
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": ""
+  }
 }
